Implemented users management endpoints.
